Added some more documentation to swagger
